Hace las puntuaciones segun si la aciertas o no

--- a/src/main/assets/index.html
+++ b/src/main/assets/index.html
@@ -5,8 +5,8 @@
  body{background:#BEF781}
  h2{color:#29088A}
  img{witdh:30%}
- .grup .esquerra{margin:60px; }
-  .grup .dret{margin:60px;  }
+ .grup .esquerra{float:left;width:50%;}
+  .grup .dret{float:right;width:50%;}
 </style>
 
 </head>
